# show_a_table

./: .gitignore  README.rst  pyproject.toml
data/: whole.json
scripts/jupyter/: get answers.ipynb  pick partial.ipynb
show_a_table/model/dqw/: dqwrapper.py
show_a_table/model/refiner/: category_selector.py  config.toml  date.py  geo.toml  geo_refiner.py  refiner.py  util.py
show_a_table/refiner/: config.toml  date.py  datetime.py  geo.toml  refiner.py  util.py
show_a_table/refiner/model/: date.toml  geo_refiner.py  refiner.py
show_a_table/refiner/view/: cands_performer.py
show_a_table/view/refiner/: cands_performer.py
tests/model/refiner/: test_date.py  test_util.py
tests/refiner/: test_date.py
