[tool.poetry]
name = "show_a_table"
version = "0.1.0"
description = "make a table using qa_system"
authors = ["Shuichi Tani <muminn4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
