[tool.poetry]
name = "show_a_table"
version = "0.1.0"
description = "make a table using qa_system"
authors = ["eval <eval.scheme@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.6.10"
toml = "^0.10.1"
japanera = "^0.1.0"
Typing = "^3.7.4"
sparqlwrapper = "^1.8.5"
pykakasi = "^2.0.1"
python-dateutil = "^2.8.1"
mecab-python3 = "^1.0.3"
unidic-lite = "^1.0.7"
fire = "^0.3.1"
jaconv = "^0.2.4"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
autopep8 = "^1.5.3"
flake8 = "^3.8.3"
isort = "^5.6.4"
pdoc = "^0.3.2"
importlib_metadata = "^2.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
